--- a/src/app.scss
+++ b/src/app.scss
@@ -4,6 +4,11 @@ html, body {
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .all {
   display: flex;
   flex-direction: column;
