feat: add visualization for active link

--- a/src/app.scss
+++ b/src/app.scss
@@ -46,5 +46,5 @@ img {
   position: absolute;
   top: 4px;
   display: block;
-  background-color: rgba(#000000 , 0.5);
+  background-color: #FFF;
 }
