--- a/src/app.scss
+++ b/src/app.scss
@@ -4,7 +4,11 @@ a {
   text-decoration: none;
   color: inherit;
 }
-
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 img {
   max-width: 100%;
   height: auto;
