--- a/src/app.scss
+++ b/src/app.scss
@@ -4,11 +4,19 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
+
 img {
   max-width: 100%;
   height: auto;
