--- a/src/components/game-sprint/style.scss
+++ b/src/components/game-sprint/style.scss
@@ -61,4 +61,17 @@
     filter: grayscale(100%);
     opacity: 0.5;
   }
+
+  .sprint-box__audio {
+
+    font-size: 2em;
+    opacity: 0.7;
+  }
+
+  .sprint-box__audio:hover {
+    opacity: 1;
+    cursor: pointer;
+  }
+
+
 }
